--- a/package.json
+++ b/package.json
@@ -3,5 +3,35 @@
   "devDependencies": {
     "gulp": "^3.8.8",
     "laravel-elixir": "*"
-  }
+  },
+  "name": "gulpRocks",
+  "description": "[![Build Status](https://travis-ci.org/laravel/framework.svg)](https://travis-ci.org/laravel/framework) [![Total Downloads](https://poser.pugx.org/laravel/framework/downloads.svg)](https://packagist.org/packages/laravel/framework) [![Latest Stable Version](https://poser.pugx.org/laravel/framework/v/stable.svg)](https://packagist.org/packages/laravel/framework) [![Latest Unstable Version](https://poser.pugx.org/laravel/framework/v/unstable.svg)](https://packagist.org/packages/laravel/framework) [![License](https://poser.pugx.org/laravel/framework/license.svg)](https://packagist.org/packages/laravel/framework)",
+  "version": "1.0.0",
+  "main": "gulpfile.js",
+  "directories": {
+    "test": "tests"
+  },
+  "dependencies": {
+    "laravel-elixir": "^0.18.6",
+    "gulp": "^3.8.11"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/HariantoAtWork/gulp-laravel.git"
+  },
+  "keywords": [
+    "Laravel",
+    "Gulp",
+    "Bootstrap",
+    "LESS"
+  ],
+  "author": "Harianto van Insulinde",
+  "license": "BSD ",
+  "bugs": {
+    "url": "https://github.com/HariantoAtWork/gulp-laravel/issues"
+  },
+  "homepage": "https://github.com/HariantoAtWork/gulp-laravel"
 }
